[package]
name = "psy-doge-bridge-wormhole"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "hashes", "address_to_string", "signer", "dogelink"]
std = []
serde = ["dep:serde", "dep:serde_json", "dep:serde_with", "dep:serde_repr"]
dogelink = ["serde", "tokio", "dep:reqwest"]
hashes = ["dep:sha2", "dep:ripemd"]
address_to_string = ["dep:bs58", "dep:anyhow"]
signer = ["dep:k256"]
tokio = ["dep:tokio"]

[[example]]
name = "guardian_processor_example"
path = "examples/guardian_processor_example.rs"
required-features = ["dogelink", "signer", "hashes"]


[dependencies]

reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.4.0", features = ["hex"], optional = true }
serde_repr = { version = "0.1.19", optional = true }


anyhow = { version = "1.0.100", default-features = false, features = [], optional = true }
bs58 = { version = "0.5.1", default-features = false, features = ["check", "alloc"], optional = true }
ripemd = { version = "0.1.3", optional = true }
sha2 = { version = "0.10.9", optional = true }

k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
], optional = true }
async-trait = { version = "0.1.88" }
hex = "0.4.3"

[dev-dependencies]
anyhow = { version = "1.0.100", default-features = false, features = [] }
bs58 = { version = "0.5.1", default-features = false, features = ["check", "alloc"] }
ripemd = { version = "0.1.3" }
sha2 = { version = "0.10.9" }
hex-literal = "0.4.1"
rand = "0.8"
rand_core = "0.6.0"

bitcoin = { git = "https://github.com/QEDProtocol/rust-dogecoin", rev = "9b52ed2ddc18c2062c741b7df7a6e70aabde3bb8", features = [ "serde" ] }

k256 = { version = "0.13.2", features = [
  "arithmetic",
  "ecdsa",
  "pkcs8",
  "precomputed-tables",
  "schnorr",
  "signature",
  "std",
  "serde",
] }

reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.4.0", features = ["hex"] }
serde_repr = { version = "0.1.19" }